--- a/Ryles_CNN/CNN_filter_non_static_85.53.ipynb
+++ b/Ryles_CNN/CNN_filter_non_static_85.53.ipynb
@@ -50,8 +50,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12.1 s, sys: 42.5 ms, total: 12.2 s\n",
-      "Wall time: 12.2 s\n"
+      "CPU times: user 12 s, sys: 37.4 ms, total: 12 s\n",
+      "Wall time: 12 s\n"
      ]
     }
    ],
@@ -179,7 +179,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/s5/j2ttz_bd7d500bsb_zg9212w0000gn/T/ipykernel_59060/2605901587.py:1: DeprecationWarning: Call to deprecated `syn1neg` (Attribute will be removed in 4.0.0, use self.trainables.syn1neg instead).\n",
+      "/var/folders/s5/j2ttz_bd7d500bsb_zg9212w0000gn/T/ipykernel_64557/2605901587.py:1: DeprecationWarning: Call to deprecated `syn1neg` (Attribute will be removed in 4.0.0, use self.trainables.syn1neg instead).\n",
       "  same_variance = np.var(embedding_model.syn1neg)\n"
      ]
     }
@@ -198,9 +198,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/s5/j2ttz_bd7d500bsb_zg9212w0000gn/T/ipykernel_59060/2823837837.py:1: DeprecationWarning: Call to deprecated `__contains__` (Method will be removed in 4.0.0, use self.wv.__contains__() instead).\n",
+      "/var/folders/s5/j2ttz_bd7d500bsb_zg9212w0000gn/T/ipykernel_64557/2823837837.py:1: DeprecationWarning: Call to deprecated `__contains__` (Method will be removed in 4.0.0, use self.wv.__contains__() instead).\n",
       "  embedding_weights = {key: embedding_model[word] if word in embedding_model else np.random.uniform(-same_variance, same_variance, embedding_model.vector_size) for key, word in vocabulary_inv.items()}\n",
-      "/var/folders/s5/j2ttz_bd7d500bsb_zg9212w0000gn/T/ipykernel_59060/2823837837.py:1: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n",
+      "/var/folders/s5/j2ttz_bd7d500bsb_zg9212w0000gn/T/ipykernel_64557/2823837837.py:1: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n",
       "  embedding_weights = {key: embedding_model[word] if word in embedding_model else np.random.uniform(-same_variance, same_variance, embedding_model.vector_size) for key, word in vocabulary_inv.items()}\n"
      ]
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "54b57e67",
    "metadata": {},
    "outputs": [],
@@ -234,25 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "27050568",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-08-02 02:34:24.642822: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "TensorShape([None, 40, 200])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "84658b1d",
    "metadata": {},
    "outputs": [],
@@ -290,8 +282,8 @@
     "z = keras.layers.Dropout(dropout)(z)\n",
     "z = keras.layers.Dense(512, activation=\"relu\")(z)\n",
     "z = keras.layers.Dropout(dropout)(z)\n",
-    "z = keras.layers.Dense(256, activation=\"relu\")(z)\n",
-    "z = keras.layers.Dropout(dropout)(z)\n",
+    "# z = keras.layers.Dense(256, activation=\"relu\")(z)\n",
+    "# z = keras.layers.Dropout(dropout)(z)\n",
     "z = keras.layers.Dense(128, activation=\"relu\")(z)\n",
     "z = keras.layers.Dropout(dropout)(z)\n",
     "model_output = keras.layers.Dense(1, activation=\"sigmoid\")(z)\n",
@@ -301,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "7b2431b3",
    "metadata": {},
    "outputs": [],
@@ -311,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "8e103fa1",
    "metadata": {
     "scrolled": true
@@ -321,63 +313,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model\"\n",
+      "Model: \"model_1\"\n",
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_1 (InputLayer)            [(None, 40)]         0                                            \n",
+      "input_2 (InputLayer)            [(None, 40)]         0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding (Embedding)           (None, 40, 200)      9284600     input_1[0][0]                    \n",
+      "embedding (Embedding)           (None, 40, 200)      9284600     input_2[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dropout (Dropout)               (None, 40, 200)      0           embedding[0][0]                  \n",
+      "dropout_4 (Dropout)             (None, 40, 200)      0           embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "conv1d (Conv1D)                 (None, 40, 100)      40100       dropout[0][0]                    \n",
+      "conv1d_4 (Conv1D)               (None, 40, 100)      40100       dropout_4[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "conv1d_1 (Conv1D)               (None, 40, 100)      60100       dropout[0][0]                    \n",
+      "conv1d_5 (Conv1D)               (None, 40, 100)      60100       dropout_4[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "conv1d_2 (Conv1D)               (None, 40, 100)      80100       dropout[0][0]                    \n",
+      "conv1d_6 (Conv1D)               (None, 40, 100)      80100       dropout_4[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "conv1d_3 (Conv1D)               (None, 40, 100)      100100      dropout[0][0]                    \n",
+      "conv1d_7 (Conv1D)               (None, 40, 100)      100100      dropout_4[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "max_pooling1d (MaxPooling1D)    (None, 20, 100)      0           conv1d[0][0]                     \n",
+      "max_pooling1d_4 (MaxPooling1D)  (None, 20, 100)      0           conv1d_4[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "max_pooling1d_1 (MaxPooling1D)  (None, 20, 100)      0           conv1d_1[0][0]                   \n",
+      "max_pooling1d_5 (MaxPooling1D)  (None, 20, 100)      0           conv1d_5[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "max_pooling1d_2 (MaxPooling1D)  (None, 20, 100)      0           conv1d_2[0][0]                   \n",
+      "max_pooling1d_6 (MaxPooling1D)  (None, 20, 100)      0           conv1d_6[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "max_pooling1d_3 (MaxPooling1D)  (None, 20, 100)      0           conv1d_3[0][0]                   \n",
+      "max_pooling1d_7 (MaxPooling1D)  (None, 20, 100)      0           conv1d_7[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "flatten (Flatten)               (None, 2000)         0           max_pooling1d[0][0]              \n",
+      "flatten_4 (Flatten)             (None, 2000)         0           max_pooling1d_4[0][0]            \n",
       "__________________________________________________________________________________________________\n",
-      "flatten_1 (Flatten)             (None, 2000)         0           max_pooling1d_1[0][0]            \n",
+      "flatten_5 (Flatten)             (None, 2000)         0           max_pooling1d_5[0][0]            \n",
       "__________________________________________________________________________________________________\n",
-      "flatten_2 (Flatten)             (None, 2000)         0           max_pooling1d_2[0][0]            \n",
+      "flatten_6 (Flatten)             (None, 2000)         0           max_pooling1d_6[0][0]            \n",
       "__________________________________________________________________________________________________\n",
-      "flatten_3 (Flatten)             (None, 2000)         0           max_pooling1d_3[0][0]            \n",
+      "flatten_7 (Flatten)             (None, 2000)         0           max_pooling1d_7[0][0]            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate (Concatenate)       (None, 8000)         0           flatten[0][0]                    \n",
-      "                                                                 flatten_1[0][0]                  \n",
-      "                                                                 flatten_2[0][0]                  \n",
-      "                                                                 flatten_3[0][0]                  \n",
+      "concatenate_1 (Concatenate)     (None, 8000)         0           flatten_4[0][0]                  \n",
+      "                                                                 flatten_5[0][0]                  \n",
+      "                                                                 flatten_6[0][0]                  \n",
+      "                                                                 flatten_7[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_1 (Dropout)             (None, 8000)         0           concatenate[0][0]                \n",
+      "dropout_5 (Dropout)             (None, 8000)         0           concatenate_1[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "dense (Dense)                   (None, 512)          4096512     dropout_1[0][0]                  \n",
+      "dense_3 (Dense)                 (None, 512)          4096512     dropout_5[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_2 (Dropout)             (None, 512)          0           dense[0][0]                      \n",
+      "dropout_6 (Dropout)             (None, 512)          0           dense_3[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_1 (Dense)                 (None, 256)          131328      dropout_2[0][0]                  \n",
+      "dense_4 (Dense)                 (None, 128)          65664       dropout_6[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_3 (Dropout)             (None, 256)          0           dense_1[0][0]                    \n",
+      "dropout_7 (Dropout)             (None, 128)          0           dense_4[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                 (None, 128)          32896       dropout_3[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_4 (Dropout)             (None, 128)          0           dense_2[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                 (None, 1)            129         dropout_4[0][0]                  \n",
+      "dense_5 (Dense)                 (None, 1)            129         dropout_7[0][0]                  \n",
       "==================================================================================================\n",
-      "Total params: 13,825,865\n",
-      "Trainable params: 13,825,865\n",
+      "Total params: 13,727,305\n",
+      "Trainable params: 13,727,305\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -389,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "2412a29e",
    "metadata": {},
    "outputs": [
@@ -410,32 +398,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "4a6aea61",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-08-02 02:34:32.193622: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:176] None of the MLIR Optimization Passes are enabled (registered 2)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/22\n",
-      "300/300 - 76s - loss: 0.7167 - accuracy: 0.5094 - val_loss: 0.6669 - val_accuracy: 0.5986\n",
-      "Epoch 2/22\n"
+      "Epoch 1/23\n",
+      "300/300 - 74s - loss: 0.7034 - accuracy: 0.5684 - val_loss: 0.5719 - val_accuracy: 0.7329\n",
+      "Epoch 2/23\n",
+      "300/300 - 73s - loss: 0.5332 - accuracy: 0.7330 - val_loss: 0.4629 - val_accuracy: 0.7991\n",
+      "Epoch 3/23\n",
+      "300/300 - 73s - loss: 0.4631 - accuracy: 0.7833 - val_loss: 0.4349 - val_accuracy: 0.8204\n",
+      "Epoch 4/23\n",
+      "300/300 - 73s - loss: 0.4271 - accuracy: 0.8054 - val_loss: 0.4028 - val_accuracy: 0.8299\n",
+      "Epoch 5/23\n",
+      "300/300 - 73s - loss: 0.4076 - accuracy: 0.8186 - val_loss: 0.4016 - val_accuracy: 0.8346\n",
+      "Epoch 6/23\n",
+      "300/300 - 73s - loss: 0.3916 - accuracy: 0.8279 - val_loss: 0.3899 - val_accuracy: 0.8386\n",
+      "Epoch 7/23\n",
+      "300/300 - 73s - loss: 0.3784 - accuracy: 0.8362 - val_loss: 0.3762 - val_accuracy: 0.8419\n",
+      "Epoch 8/23\n",
+      "300/300 - 73s - loss: 0.3670 - accuracy: 0.8419 - val_loss: 0.3696 - val_accuracy: 0.8452\n",
+      "Epoch 9/23\n",
+      "300/300 - 73s - loss: 0.3569 - accuracy: 0.8475 - val_loss: 0.3635 - val_accuracy: 0.8460\n",
+      "Epoch 10/23\n",
+      "300/300 - 73s - loss: 0.3489 - accuracy: 0.8515 - val_loss: 0.3565 - val_accuracy: 0.8481\n",
+      "Epoch 11/23\n",
+      "300/300 - 73s - loss: 0.3412 - accuracy: 0.8559 - val_loss: 0.3490 - val_accuracy: 0.8496\n",
+      "Epoch 12/23\n",
+      "300/300 - 73s - loss: 0.3346 - accuracy: 0.8583 - val_loss: 0.3489 - val_accuracy: 0.8503\n",
+      "Epoch 13/23\n",
+      "300/300 - 72s - loss: 0.3287 - accuracy: 0.8616 - val_loss: 0.3454 - val_accuracy: 0.8508\n",
+      "Epoch 14/23\n",
+      "300/300 - 73s - loss: 0.3212 - accuracy: 0.8657 - val_loss: 0.3424 - val_accuracy: 0.8516\n",
+      "Epoch 15/23\n",
+      "300/300 - 72s - loss: 0.3163 - accuracy: 0.8694 - val_loss: 0.3409 - val_accuracy: 0.8535\n",
+      "Epoch 16/23\n",
+      "300/300 - 72s - loss: 0.3090 - accuracy: 0.8718 - val_loss: 0.3418 - val_accuracy: 0.8532\n",
+      "Epoch 17/23\n",
+      "300/300 - 72s - loss: 0.3046 - accuracy: 0.8742 - val_loss: 0.3405 - val_accuracy: 0.8523\n",
+      "Epoch 18/23\n",
+      "300/300 - 73s - loss: 0.2996 - accuracy: 0.8775 - val_loss: 0.3392 - val_accuracy: 0.8540\n",
+      "Epoch 19/23\n",
+      "300/300 - 72s - loss: 0.2956 - accuracy: 0.8788 - val_loss: 0.3414 - val_accuracy: 0.8542\n",
+      "Epoch 20/23\n",
+      "300/300 - 72s - loss: 0.2908 - accuracy: 0.8807 - val_loss: 0.3388 - val_accuracy: 0.8539\n",
+      "Epoch 21/23\n",
+      "300/300 - 73s - loss: 0.2863 - accuracy: 0.8827 - val_loss: 0.3376 - val_accuracy: 0.8543\n",
+      "Epoch 22/23\n",
+      "300/300 - 73s - loss: 0.2829 - accuracy: 0.8853 - val_loss: 0.3390 - val_accuracy: 0.8544\n",
+      "Epoch 23/23\n",
+      "300/300 - 72s - loss: 0.2800 - accuracy: 0.8852 - val_loss: 0.3375 - val_accuracy: 0.8553\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7fb84266d8b0>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(train_pad, train_dataset['label'], batch_size=500, epochs=22, validation_data=(test_pad, test_dataset['label']),verbose=2)"
+    "model.fit(train_pad, train_dataset['label'], batch_size=500, epochs=23, validation_data=(test_pad, test_dataset['label']),verbose=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bf18af5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
